# llm_request

./: .bandit  .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  release.yml
docs/: api.rst  conf.py  examples.rst  index.md  index.rst
tests/: test_main.py
